syntax = "proto3";

package api.v1;

option go_package = "api/v1/video_service";

service VideoService {
  // Creates Video
  rpc CreateVideo(CreateVideoRequest) returns (CreateVideoResponse) {};
  // Deletes Video
  rpc DeleteVideo(DeleteVideoRequest) returns (DeleteVideoResponse) {};

  // Creates Annotation
  rpc CreateAnnotation(CreateAnnotationRequest) returns (CreateAnnotationResponse) {};
  // Returns all Video's Annotation
  rpc GetAnnotations(GetAnnotationsRequest) returns (GetAnnotationsResponse) {};
  // Updates Annotation
  rpc UpdateAnnotation(UpdateAnnotationRequest) returns (UpdateAnnotationResponse) {};
  // Deletes Annotation
  rpc DeleteAnnotation(DeleteAnnotationRequest) returns (DeleteAnnotationResponse) {};
}

message Video {
  // supposed to be youtube ID
  // example: from URL https://www.youtube.com/watch?v=dQw4w9WgXcQ ID is dQw4w9WgXcQ
  string ID = 1;
  string Title = 2;
  string Description = 3;
}

message AnnotationMeta {
  string VideoID = 1;
  string Start = 2; // should be in format mm:ss
  string End = 3; // should be in format mm:ss
  string Type = 4;
  string Notes = 5;
}

message Annotation {
  int64 ID = 1;
  AnnotationMeta AnnotationMeta = 2;
}

message CreateVideoRequest {
  Video Video = 1;
}

message CreateVideoResponse {
  Video Video = 1;
}

message DeleteVideoRequest {
  string VideoID = 1;
}

message DeleteVideoResponse {
}

message CreateAnnotationRequest {
  AnnotationMeta AnnotationMeta = 1;
}

message CreateAnnotationResponse {
  Annotation Annotation = 1;
}

message GetAnnotationsRequest {
  string VideoID = 1;
}

message GetAnnotationsResponse {
  repeated Annotation Annotations = 1;
}

message UpdateAnnotationRequest {
  Annotation Annotation = 1;
}

message UpdateAnnotationResponse {
}

message DeleteAnnotationRequest {
  int64 AnnotationID = 1;
}

message DeleteAnnotationResponse {
}
